<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/custom_color_primary"
    android:layout_height="match_parent"
    tools:context=".SingUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/icon_singin_background"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_marginTop="40dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_twotone_person_add_alt_1_24"
            tools:ignore="ImageContrastCheck" />

        <EditText
            android:id="@+id/nameSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:hint="@string/name"
            android:textColor="@color/custom_color_text_primary"
            android:minHeight="48dp"
            android:autofillHints=""
            android:elevation="1dp"
            android:textColorHint="@color/custom_color_text_secondary"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/phoneSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/phone_no"
            android:text=""
            android:textColor="@color/custom_color_text_primary"
            android:minHeight="48dp"
            android:autofillHints=""
            android:elevation="1dp"
            android:textColorHint="@color/custom_color_text_secondary"
            android:inputType="phone" />
        <EditText
            android:id="@+id/addressSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/address"
            android:textColor="@color/custom_color_text_primary"
            android:minHeight="48dp"
            android:autofillHints=""
            android:elevation="1dp"
            android:textColorHint="@color/custom_color_text_secondary"
            android:inputType="text" />
        <EditText
            android:id="@+id/emailSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:textColor="@color/custom_color_text_primary"
            android:minHeight="48dp"
            android:autofillHints=""
            android:elevation="1dp"
            android:textColorHint="@color/custom_color_text_secondary"
            android:inputType="text" />
        <EditText
            android:id="@+id/passwordSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:textColor="@color/custom_color_text_primary"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:elevation="1dp"
            android:textColorHint="@color/custom_color_text_secondary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/custom_color_secondary"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:text="@string/singup"
            android:textColor="#455A64"
            android:textSize="30sp"
            app:cornerRadius="40dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>