<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/custom_color_primary"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/onboardingViewpage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/view_pager_background"
        app:layout_constraintBottom_toTopOf="@id/view_centerOfNext"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/indicatorContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:textStyle="bold"
        android:textColor="@color/custom_color_text_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <View
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/icon_outer_background"
        app:layout_constraintBottom_toBottomOf="@id/nextImage"
        app:layout_constraintTop_toTopOf="@id/nextImage"
        app:layout_constraintEnd_toEndOf="@id/nextImage"
        app:layout_constraintStart_toStartOf="@id/nextImage"/>
    <View
        android:id="@+id/view_centerOfNext"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toTopOf="@+id/nextImage"
        app:layout_constraintEnd_toEndOf="@+id/nextImage"
        app:layout_constraintBottom_toBottomOf="@id/nextImage"
        app:layout_constraintStart_toStartOf="@+id/nextImage" />

    <ImageView
        android:id="@+id/nextImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/icon_background"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_right"
        app:layout_constraintBottom_toTopOf="@+id/btngetstart"
        app:layout_constraintEnd_toEndOf="@+id/btngetstart"
        app:layout_constraintStart_toStartOf="@+id/btngetstart" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btngetstart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/get_start"
        android:textAllCaps="false"
        android:textColor="#455A64"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="@color/custom_color_secondary"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>