<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".boardActivity">

    <TextView
        android:id="@+id/nameDB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textColor="@color/custom_color_text_primary"
        android:text="@string/name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/emailDB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/custom_color_text_primary"
        app:layout_constraintTop_toTopOf="@id/nameDB"
        android:layout_marginTop="50dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/phoneDB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/custom_color_text_primary"
        android:layout_marginTop="50dp"
        android:text="phone"
        app:layout_constraintTop_toTopOf="@id/emailDB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/addressDB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/phoneDB"
        android:layout_marginTop="50dp"
        android:textColor="@color/custom_color_text_primary"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/addressDB"
        android:layout_marginTop="50dp"
        android:textColor="@color/custom_color_text_primary"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/addressDB"
        android:layout_marginTop="50dp"
        android:textColor="@color/custom_color_text_primary"
        android:text="@string/address"
        app:layout_constraintStart_toEndOf="@id/latitude"
        />

    <fragment
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/mapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/latitude"
        app:layout_constraintBottom_toTopOf="@id/btnMap"/>

    <Button
        android:id="@+id/btnMap"
        android:text="Map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/btn"
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>